test/e2e/testdata/grpcroute-to-backend-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-infra-backend-v1
  namespace: gateway-conformance-infra
spec:
  selector:
    app: grpc-infra-backend-v1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
    appProtocol: kubernetes.io/h2c
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-infra-backend-v1
  namespace: gateway-conformance-infra
  labels:
    app: grpc-infra-backend-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-infra-backend-v1
  template:
    metadata:
      labels:
        app: grpc-infra-backend-v1
    spec:
      containers:
      - name: grpc-infra-backend-v1
        image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: GRPC_ECHO_SERVER
          value: "1"
        resources:
          requests:
            cpu: 10m
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: exact-matching
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - method:
        service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
        method: Echo
    backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-ip
      port: 8080
